<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dalsps</string>
    <string name="activity_main_compose_title">Run Query</string>
    <string name="activity_main_timeline_title">Results</string>
    <string name="button_update_text">Run</string>
    <string name="edit_msg_hint">Please enter the query</string>
    <string name="post_status_success">Successfully posted message</string>
    <string name="post_status_fail">Failed to post message</string>
    <!-- chat server settings -->
    <string name="pref_user_title">User Id</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_server_port_title">Port</string>
    <string name="pref_service_title">Service</string>
    <string name="pref_notified_title">Notified User</string>
    
    <!-- end chat server settings -->
    <string name="menu_preferences_title">Settings</string>
    <string name="menu_preferences_title_cond">Settings</string>
    <string name="menu_refresh_title">Refresh Results</string>
    <string name="menu_refresh_title_cond">Refresh</string>
    <string name="menu_compose_title">Compose New Status</string>
    <string name="menu_compose_title_cond">Stop</string>
    <string name="menu_timeline_title">Show Results</string>
    <string name="menu_timeline_title_cond">Results</string>
    <string name="perm_new_status_label">new status notification</string>
    <string name="notify_new_status_ticker_text">New status</string>
    <string name="notify_new_status_content_title">New status</string>
    <string name="menu_query_options_title">Query Options</string>
    <string name="menu_query_options_title_cond">Query</string>
    <string name="menu_query_options_lt">&lt; Query</string>
    <string name="menu_query_options_gt">&gt; Query"</string>
    <string name="menu_query_options_eq"> = Query</string>
    <string name="menu_query_options_and"> And Query</string>
    <string name="menu_query_options_or">Or Query</string>
    <string name="menu_query_options_neq"> =! Query</string>
    <string name="menu_query_options_gteq"> &gt;= Query</string>
    <string name="menu_query_options_lteq"> &lt;= Query</string>
    <string name="menu_query_options_attrs">Query Attributes</string>
    <string name="menu_query_options_acc">Query Accelorometer</string>
    <string name="menu_query_options_action">Action Query</string>
    <string name="menu_query_options_action_multiple">Multiple Action Query</string>
    <string name="menu_query_options_invalid_query">Invalid Query</string>
    
    <plurals name="notify_new_status_content_text">
        <item quantity="one">You have one new message</item>
        <item quantity="other">You have %d new messages</item>
    </plurals>
</resources>